--- a/CICD/GitlabAllinone.yml
+++ b/CICD/GitlabAllinone.yml
@@ -7,6 +7,7 @@ variables:
 
 # Define the stages of the pipeline, executed in order
 stages:
+  - security
   - lint  # Stage for code quality checks (e.g., linting)
   - test  # Stage for running unit and integration tests
   - build  # Stage for building Docker images
@@ -35,6 +36,32 @@ before_script:
   - python --version  # Prints the Python version for debugging
   - pip install --upgrade pip  # Upgrades pip to the latest version
   - pip install -r requirements.txt --cache-dir $PIP_CACHE_DIR  # Installs project dependencies from requirements.txt, using the cache
+
+codeql-analysis:
+  stage: security
+  image: ubuntu:22.04  # Base image for installing dependencies
+  variables:
+    CODEQL_VERSION: "v2.18.2"  # Specify a CodeQL CLI version
+    CODEQL_HOME: "/codeql"
+  before_script:
+    - apt-get update && apt-get install -y wget unzip python3 python3-pip git
+    - wget https://github.com/github/codeql-cli-binaries/releases/download/$CODEQL_VERSION/codeql-linux64.zip
+    - unzip codeql-linux64.zip -d $CODEQL_HOME
+    - export PATH=$CODEQL_HOME/codeql:$PATH
+    - git clone --depth 1 https://github.com/github/codeql.git /codeql-queries
+  script:
+    - $CODEQL_HOME/codeql/codeql database create codeql-db --language=python --source-root=.
+    - $CODEQL_HOME/codeql/codeql database analyze codeql-db \
+      --format=sarif-latest \
+      --output=codeql-results.sarif \
+      /codeql-queries/python/ql/src/Security
+    - cat codeql-results.sarif
+  artifacts:
+    paths:
+      - codeql-results.sarif
+    expire_in: 1 week
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "main" || $CI_MERGE_REQUEST_IID'  # Run on main or MRs
 
 # Job to enforce code quality through linting
 lint_job:
